Deleted old web UI

--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -1,77 +1,1 @@
-<html>
-  <head>
-    <title>Vert.x Event Bus Bridge Example</title>
-    <script src="sockjs.min.js"></script>
-    <script src='vertx-eventbus.js'></script>
-
-    <style>
-      .tweetBox {
-        border: 1px solid #888888;
-        border-radius: 4px;
-        box-shadow: 4px 4px 3px #888888;
-        padding: 5px;
-        font-size: 14pt;
-        margin: 2px 2px 15px 2px;
-        background: white;
-      }
-    </style>
-
-    <script>
-        function format(tweetBody) {
-            var webLinks = tweetBody.replace(/(https?:\/\/[^ ]*)/g, '<a href="$1" target="_blank">$1</a>');
-            var hashLinks = webLinks.replace(/#([^ .]*)/g, '<a href="https://twitter.com/hashtag/$1?src=hash" target="_blank">#$1</a>');
-            return hashLinks.replace(/@([^ .]*)/g, '<a href="https://twitter.com/$1" target="_blank">@$1</a>');
-        }
-
-        var eb = {};
-        var backoff = 0;
-
-        function initEventBus() {
-            console.log("Attempting to connect to the eventbus.");
-
-            // Create an instance of the Vert.x event bus.
-            eb = new EventBus("http://localhost:8080/eventbus/");
-
-            // Once the event bus connection is established, enable the form input field and register a listener for server
-            // messages.
-            eb.onopen = function () {
-                console.log("Eventbus connected.");
-                backoff = 0;
-
-                // set a handler to receive a message
-                eb.registerHandler('tweet.stream', function(error, message) {
-                  var tweetSpace = document.getElementById("tweets");
-                  if (tweetSpace.childElementCount>20) {
-                      tweetSpace.removeChild(tweetSpace.lastElementChild);
-                  }
-                  var newElement = document.createElement("div");
-                  newElement.innerHTML = format(message.body);
-                  newElement.className = 'tweetBox';
-                  tweetSpace.insertBefore(newElement, tweetSpace.firstElementChild);
-                });
-            };
-
-            // When the event bus connection closes, attempt to reconnect. If reconnect fails multiple times the reconnection
-            // attempts get slower until it tries every 10 seconds. Also, disables the input form element to prevent typing.
-            eb.onclose = function() {
-                console.log("Eventbus connection lost.");
-                if (backoff<10000) {
-                    backoff += 1000;
-                }
-
-                // Tell the browser to reconnect the eventbus in 'backoff' milliseconds.
-                window.setTimeout(function() {
-                    initEventBus();
-                }, backoff);
-            };
-        }
-
-        // Initialize the event bus and event handlers.
-        initEventBus();
-    </script>
-  </head>
-  <h1>Vert.x Tweet Bridges</h1>
-  <div id="tweets">
-
-  </div>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><title>Quasar App</title><link rel=icon href=statics/quasar-logo.png type=image/x-icon><link href=app.667445a3ad49a7335de77cc5ca1ce32e.css rel=stylesheet></head><body><div id=q-app></div><script type=text/javascript src=js/manifest.js></script><script type=text/javascript src=js/vendor.js></script><script type=text/javascript src=js/app.js></script></body></html>
